RESOLVED FIXED141001
Scroll snap points do not work in the vertical direction
https://bugs.webkit.org/show_bug.cgi?id=141001
Summary Scroll snap points do not work in the vertical direction
Brent Fulgham
Reported 2015-01-28 10:02:53 PST
Created attachment 245550 [details] Example of horizontal and vertical scroll snap points Scroll snap points work properly in the horizontal direction, but not in the vertical. See the attached example page. The top example works properly, but the bottom fails.
Attachments
Example of horizontal and vertical scroll snap points (2.72 KB, text/html)
2015-01-28 10:02 PST, Brent Fulgham
no flags
Patch (5.87 KB, patch)
2015-01-28 16:44 PST, Brent Fulgham
bdakin: review+
Brent Fulgham
Comment 1 2015-01-28 10:04:16 PST
The problem seems to be in EventHandler::defaultWheelEventHandler: When scrolling in the horizontal direction, we do not mark the wheelEvent as 'default handled', which allows the event to bubble up and get handled by the snap logic. When scrolling in the vertical direction, we do mark the event as 'default handled', which prevents us from bubbling the event up to the snap logic.
Radar WebKit Bug Importer
Comment 2 2015-01-28 10:04:37 PST
Brent Fulgham
Comment 3 2015-01-28 10:21:26 PST
Actually, it looks like the difference might be in ScrollAnimatorMac::handleWheelEvent. We ask the ScrollAnimator to handle the wheel event directly in the vertical case, rather than passing it along to the scroll elasticity controller.
Brent Fulgham
Comment 4 2015-01-28 16:44:59 PST
Beth Dakin
Comment 5 2015-01-28 16:51:53 PST
Comment on attachment 245580 [details] Patch R=me assuming this does not break rubber-banding in overflow areas and iframes.
Brent Fulgham
Comment 6 2015-01-28 18:15:45 PST
Note You need to log in before you can comment on or make changes to this bug.