Source/WebCore/platform/mac/ScrollAnimatorMac.mm
@@ -1152,6 +1152,21 @@ bool ScrollAnimatorMac::isAlreadyPinnedInDirectionOfGesture(const PlatformWheelE
     return false;
 }
 
+#if ENABLE(CSS_SCROLL_SNAP)
+static bool gestureShouldBeginSnap(const PlatformWheelEvent& wheelEvent, const Vector<LayoutUnit>* snapOffsets)
+{
+    if (!snapOffsets)
+        return false;
+    
+    if ((wheelEvent.phase() != PlatformWheelEventPhaseEnded)
+        && !(wheelEvent.phase() == PlatformWheelEventPhaseNone && wheelEvent.momentumPhase() == PlatformWheelEventPhaseEnded)) {
+        return false;
+    }
+
+    return true;
+}
+#endif
+
 bool ScrollAnimatorMac::allowsVerticalStretching(const PlatformWheelEvent& wheelEvent)
 {
     switch (m_scrollableArea->verticalScrollElasticity()) {
@@ -1160,6 +1175,10 @@ bool ScrollAnimatorMac::allowsVerticalStretching(const PlatformWheelEvent& wheel
         Scrollbar* vScroller = m_scrollableArea->verticalScrollbar();
         bool scrollbarsAllowStretching = ((vScroller && vScroller->enabled()) || (!hScroller || !hScroller->enabled()));
         bool eventPreventsStretching = m_scrollableArea->hasScrollableOrRubberbandableAncestor() && newGestureIsStarting(wheelEvent) && isAlreadyPinnedInDirectionOfGesture(wheelEvent, ScrollEventAxis::Vertical);
+#if ENABLE(CSS_SCROLL_SNAP)
+        if (!eventPreventsStretching)
+            eventPreventsStretching = gestureShouldBeginSnap(wheelEvent, m_scrollableArea->verticalSnapOffsets());
+#endif
         return scrollbarsAllowStretching && !eventPreventsStretching;
     }
     case ScrollElasticityNone:
@@ -1180,6 +1199,10 @@ bool ScrollAnimatorMac::allowsHorizontalStretching(const PlatformWheelEvent& whe
         Scrollbar* vScroller = m_scrollableArea->verticalScrollbar();
         bool scrollbarsAllowStretching = ((hScroller && hScroller->enabled()) || (!vScroller || !vScroller->enabled()));
         bool eventPreventsStretching = m_scrollableArea->hasScrollableOrRubberbandableAncestor() && newGestureIsStarting(wheelEvent) && isAlreadyPinnedInDirectionOfGesture(wheelEvent, ScrollEventAxis::Horizontal);
+#if ENABLE(CSS_SCROLL_SNAP)
+        if (!eventPreventsStretching)
+            eventPreventsStretching = gestureShouldBeginSnap(wheelEvent, m_scrollableArea->horizontalSnapOffsets());
+#endif
         return scrollbarsAllowStretching && !eventPreventsStretching;
     }
     case ScrollElasticityNone:
